--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             </div>
 
             <div class="buy-section">
-                <a href="https://yudhamster.gumroad.com/l/gltzf" target="_blank" class="buy-button">
+                <a href="https://scabiosa.gumroad.com/l/gltzf" target="_blank" class="buy-button">
                     Buy Now – $20 One-Time
                 </a>
             </div>
